--- a/HW/Probability_theory_HW9.ipynb
+++ b/HW/Probability_theory_HW9.ipynb
@@ -257,17 +257,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "31fee31a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Размер выборок равен 8.749999999999998\n"
+     ]
+    }
+   ],
    "source": [
     "alpha=0.05\n",
     "B=0.9\n",
     "PI=10.5 #по таблице выше для alpha и B\n",
     "p1=0.9\n",
     "p2=0.3\n",
-    "N=(p1*)"
+    "N=(p1*(1-p1)+p2*(1-p2))*PI/((p1-p2)**2)\n",
+    "print(f'Размер выборок равен {N}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bc9905c",
+   "metadata": {},
+   "source": [
+    "7. Из 10 билетов выигрышными являются 2. Чему равна вероятность того, что среди взятых наудачу 5 билетов два выигрышных?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "27a81e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2222222222222222"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from math import comb\n",
+    "p=comb(2,2)*comb(8,3)/comb(10,5)\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2f64746",
+   "metadata": {},
+   "source": [
+    "8. Вероятность рождения мальчиков 0.515. Найти наивероятнейшее число девочек из 600 новорожденных."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b8dcfad9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "291.485"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p=1-0.515\n",
+    "n=600\n",
+    "k0=p*n+p\n",
+    "k0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e882a5b8",
+   "metadata": {},
+   "source": [
+    "9. Какова вероятность наступления события B в каждом отдельном испытании, если наивероятнейшее число наступления события B в 120 испытаний составило 32."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4edd1225",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2644628099173554"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n=120\n",
+    "k0=32\n",
+    "p=k0/(n+1)\n",
+    "p"
    ]
   }
  ],
